--- a/Templates/Test.html
+++ b/Templates/Test.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello</title>
 </head>
 <body>
-
+<h1>Hello?</h1>
+<form>
+    <input name="Firstname">
+</form>
 </body>
 </html>
