--- a/Templates/Test.html
+++ b/Templates/Test.html
@@ -7,7 +7,9 @@
 <body>
 <h1>Hello?</h1>
 <form>
-    <input name="Firstname">
+    <label>
+        <input name="Firstname">
+    </label>
 </form>
 </body>
 </html>
