--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -6,11 +6,30 @@
 </head>
 
 <style>
+.button {
+  text-align: left;
+  background-color: #3DBB56;
+  border: none;
+  color: white;
+  padding: 10px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family: nunito-bold, serif;
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+  background-color: #259338; /* Green */
+  color: white;
+}
+
 table {
-  font-family: nunito-regular, serif;
+  font-family: nunito-regular, serif; font-size: 15px;
   border-collapse: collapse;
   width: 100%;
-  size: 9pt;
 }
 
 td, th {
@@ -26,13 +45,19 @@ tr:nth-child(even) {
 
 <body>
 
-<h1 style="font-family:Nunito,serif;color:#041F74;"> Toetsvragen lijst</h1>
+<button class="button"> Vragen </button>
+<button class="button"> Ai Promts </button>
+<button class="button"> Redacteuren </button>
+<!--<input type="button" class="button" value="Input Button">-->
+
+
+<h1 style="font-family:Nunito,serif; color:#041F74;"> Toetsvragen lijst</h1>
 <p style="font-family:Zilla slab,sans-serif;color:#041F74;">Toetsvragen lijst</p>
 
-<button type="button" style="font-family:Zilla slab,sans-serif;color:blue;"> Ververs </button>
+<button type="button" style="font-family:Zilla slab,sans-serif;"> Ververs </button>
 
 <table>
-  <tr>
+  <tr style="font-family: nunito-regular, serif; color:#041F74; font-size: 20px;">
     <th>Vraag</th>
     <th>vak</th>
     <th>invoer datum</th>
