--- a/Templates/inloggen.html
+++ b/Templates/inloggen.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="inloggen.css">
         </head>
 <body>
+<header>
+    <img src="testcorrect-logo.svg" alt="logo" class = "logo">
+</header>
 <h1>Inloggen</h1>
 <div class="login_form">
                 <form action="login.php" method="POST">
