--- a/Templates/inloggen.css
+++ b/Templates/inloggen.css
@@ -1,5 +1,5 @@
 body {
-            font-family: Arial, sans-serif;
+            font-family: Nunito, Nunito;
             background-color: #f2f2f2;
             margin: 0;
             padding: 0;
@@ -62,6 +62,7 @@ body {
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            font: Nunito;
             font-weight: bold;
         }
 
@@ -92,4 +93,5 @@ body {
 
         footer a {
         color: #55ad5b;
+        font: nunito;
         }
