--- a/Templates/inloggen.html
+++ b/Templates/inloggen.html
@@ -7,8 +7,29 @@
     <link rel="stylesheet" href="inloggen.css">
         </head>
 <body>
-<header>
-    <img src="testcorrect-logo.svg" alt="logo" class = "logo">
+<header class="top-bar">
+    <div class="container-main">
+        <div class="left-side">
+            <a href="/" class="site-logo">
+                <img src="testcorrect-logo.svg" alt="Logo">
+            </a>
+        </div>
+
+        <div class="menu-container">
+            <ul class="main-navigation">
+                <li><a href="#">Oplossingen</a></li>
+                <li><a href="#">Toetsplatform</a></li>
+                <li><a href="#">Aanbod</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Over</a></li>
+            </ul>
+        </div>
+
+        <div class="button-container">
+            <a href="#" class="button one">Probeer nu</a>
+            <a href="login.html" class="button two">Log in</a>
+        </div>
+    </div>
 </header>
 <h1>Inloggen</h1>
 <div class="login_form">
