--- a/Templates/inloggen.css
+++ b/Templates/inloggen.css
@@ -1,5 +1,5 @@
 body {
-            font-family: sans-serif, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             background-color: #F2F6FF;
             margin: 0;
             padding: 0;
@@ -29,7 +29,7 @@ body {
        }
 
        .left-side img {
-            width: 150px;
+            width: 230px;
             height: auto;
        }
 
