--- a/Templates/inloggen.css
+++ b/Templates/inloggen.css
@@ -1,6 +1,10 @@
 body {
-            font-family: Arial, Helvetica, sans-serif;
+            font: Nunito, sans-serif;
             background-color: #F2F6FF;
+            font-size: 18px;
+            font-stretch: normal;
+            font-weight: 400;
+            line-weight: 1.33;
             margin: 0;
             padding: 0;
             display: flex;
