--- a/Templates/inloggen.css
+++ b/Templates/inloggen.css
@@ -1,10 +1,6 @@
 body {
-            font: Nunito, sans-serif;
+            font-family: Nunito, sans-serif;
             background-color: #F2F6FF;
-            font-size: 18px;
-            font-stretch: normal;
-            font-weight: 400;
-            line-weight: 1.33;
             margin: 0;
             padding: 0;
             display: flex;
