--- a/Templates/inloggen.css
+++ b/Templates/inloggen.css
@@ -12,6 +12,7 @@ body {
 
         .top-bar {
            background-color: #FFFFFF;
+           font-size: 19px;
            position: fixed;
            width: 100%;
            top: 0;
@@ -47,8 +48,9 @@ body {
         .main-navigation a {
             color: #041f74;
             text-decoration: none;
-            font-size: 16px;
+            font-size: 19px;
             font-weight: bold;
+            font-family: Nunito, sans-serif;
         }
 
         .button-container a {
