wijzig redacteur page

--- a/Templates/wijzig_redacteuren.html
+++ b/Templates/wijzig_redacteuren.html
@@ -3,44 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>wijzig redacteuren</title>
+    <style>
+
+    </style>
 </head>
-<body>
+<body style="">
+    <button style="font-size:15px; color: black">vragen</button>
+    <button style="font-size:15px; color: black">AI prompts</button>
+    <button style="font-size:15px; color: black">Redacteuren</button>
+    <h2>wijzig redacteuren</h2>
+        <table>
+            <form>
+                <div id="box1">
+                    <div>
+                        <lable for="uname">naam: </lable>
+                        <input type="" placeholder="naam" required>
+                    </div>
 
-<button style="font-size:15px; color: black">vragen</button>
-<button style="font-size:15px; color: black">AI prompts</button>
-<button style="font-size:15px; color: black">Redacteuren</button>
-<h2>wijzig redacteuren</h2>
-    <table>
-        <form>
-            <div>
-                <lable for="uname">naam: </lable>
-                <input type="" placeholder="naam" required>
-            </div>
+                    <br>
 
-            <br>
+                    <div>
+                        <lable for="uname">Email/Login: </lable>
+                        <input type="" placeholder="naam@hr.nl" required>
+                    </div>
 
-            <div>
-                <lable for="uname">Email/Login: </lable>
-                <input type="" placeholder="naam@hr.nl" required>
-            </div>
+                    <br>
 
-            <br>
+                    <div>
+                        <lable for="uname">wachtwoord: </lable>
+                        <input type="" placeholder="spongebob123" required>
+                    </div>
+                </div>
+                <br>
+                <div>
+                    <button style="font-size:15px; color: black">opslaan</button>
+                </div>
+                <br>
+                <div>
+                    <button style="font-size:15px; color: black">verwijder</button>
+                </div>
+            </form>
 
-            <div>
-                <lable for="uname">wachtwoord: </lable>
-                <input type="" placeholder="spongebob123" required>
-            </div>
-            <br>
-            <div>
-                <button style="font-size:15px; color: black">opslaan</button>
-            </div>
-            <br>
-            <div>
-                <button style="font-size:15px; color: black">verwijder</button>
-            </div>
-        </form>
-
-    </table>
+        </table>
 
 
 </body>
