--- a/Templates/inloggen.html
+++ b/Templates/inloggen.html
@@ -18,16 +18,16 @@
         <div class="menu-container">
             <ul class="main-navigation">
                 <li><a href="#">Oplossingen</a></li>
-                <li><a href="#">Toetsplatform</a></li>
-                <li><a href="#">Aanbod</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Over</a></li>
+                <li><a href="https://www.test-correct.nl/toetsplatform">Toetsplatform</a></li>
+                <li><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
+                <li><a href="https://www.test-correct.nl/support">Support</a></li>
+                <li><a href="https://www.test-correct.nl/overons">Over</a></li>
             </ul>
         </div>
 
         <div class="button-container">
-            <a href="#" class="button one">Probeer nu</a>
-            <a href="login.html" class="button two">Log in</a>
+            <a href="https://www.test-correct.nl/welcome" class="button one">Probeer nu</a>
+            <a href="https://welcome.test-correct.nl/login" class="button two">Log in</a>
         </div>
     </div>
 </header>
