--- a/Templates/wijzig_redacteuren.html
+++ b/Templates/wijzig_redacteuren.html
@@ -24,14 +24,14 @@
 
                     <div>
                         <lable for="uname">Email/Login: </lable>
-                        <input type="" placeholder="naam@hr.nl" required>
+                        <input type="" placeholder="email@login" required>
                     </div>
 
                     <br>
 
                     <div>
                         <lable for="uname">wachtwoord: </lable>
-                        <input type="" placeholder="spongebob123" required>
+                        <input type="" placeholder="wachtwoord" required>
                     </div>
                 </div>
                 <br>
