--- a/Templates/wijzig_redacteuren.html
+++ b/Templates/wijzig_redacteuren.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>wijzig redacteuren</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body style="">
-    <button style="font-size:15px; color: black">vragen</button>
-    <button style="font-size:15px; color: black">AI prompts</button>
-    <button style="font-size:15px; color: black">Redacteuren</button>
-    <h2>wijzig redacteuren</h2>
+   <header class="header">
+        <a href="../index.html">
+            <img src="../assets/logo/logo_test-correct.svg" alt="Test-Correct Logo" class="logo">
+        </a>
+        <nav>
+            <a href="#" class="button">Vragen</a>
+            <a href="#" class="button">AI Prompts</a>
+            <a href="#" class="button active">Redacteuren</a>
+        </nav>
+    </header>
+    <h1>wijzig redacteuren</h1>
         <table>
             <form>
                 <div id="box1">
@@ -34,18 +39,15 @@
                         <input type="" placeholder="wachtwoord" required>
                     </div>
                 </div>
-                <br>
-                <div>
-                    <button style="font-size:15px; color: black">opslaan</button>
-                </div>
-                <br>
-                <div>
-                    <button style="font-size:15px; color: black">verwijder</button>
-                </div>
             </form>
 
         </table>
-
+        <div class="button">
+                    <button class="button">Opslaan</button>
+        </div>
+        <br>
+        <div class="button">
+                    <button class="button">Verwijder</button>
 
 </body>
 </html>
