updated wijzig redacteuren to apply same styling

--- a/Templates/wijzig_redacteuren.html
+++ b/Templates/wijzig_redacteuren.html
@@ -5,7 +5,7 @@
     <title>wijzig redacteuren</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="">
+<body>
    <header class="header">
         <a href="../index.html">
             <img src="../assets/logo/logo_test-correct.svg" alt="Test-Correct Logo" class="logo">
@@ -16,7 +16,8 @@
             <a href="#" class="button active">Redacteuren</a>
         </nav>
     </header>
-    <h1>wijzig redacteuren</h1>
+   <main class="container">
+       <h1>wijzig redacteuren</h1>
         <table>
             <form>
                 <div id="box1">
@@ -48,6 +49,6 @@
         <br>
         <div class="button">
                     <button class="button">Verwijder</button>
-
+   </main>
 </body>
 </html>
