added admin checkbox

--- a/Templates/wijzig_redacteuren.html
+++ b/Templates/wijzig_redacteuren.html
@@ -39,7 +39,13 @@
                         <lable for="uname">wachtwoord: </lable>
                         <input type="" placeholder="wachtwoord" required>
                     </div>
+                    <br>
+                    <div>
+                        <lable for="usename">is admin? </lable>
+                        <input type="checkbox" disabled>
+                    </div>
                 </div>
+
             </form>
 
         </table>
