changed map structure logo

--- a/Templates/inloggen.html
+++ b/Templates/inloggen.html
@@ -11,7 +11,7 @@
     <div class="container-main">
         <div class="left-side">
             <a href="/" class="site-logo">
-                <img src="testcorrect-logo.svg" alt="Logo">
+                <img src="../static/assets/logo/testcorrect-logo.svg" alt="Logo">
             </a>
         </div>
 
