linked css file

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,6 +23,11 @@ body {
     margin: 0 15px;
 }
 
+.logo {
+    height: 50px;
+    width: auto;
+}
+
 .header div:first-child {
     display: flex;
     align-items: center;
