--- a/Templates/redacteur.html
+++ b/Templates/redacteur.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redacteuren</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
     <header class="header">
-        <a href="../index.html">
-            <img src="../assets/logo/logo_test-correct.svg" alt="Test-Correct Logo" class="logo">
+        <a href="https://www.test-correct.nl/welcome">
+            <img src="../static/assets/logo/testcorrect-logo.svg" alt="Test-Correct Logo" class="logo">
         </a>
         <nav>
             <a href="#" class="button">Vragen</a>
