--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI Prompts</title>
     <link rel="stylesheet" href="ai_prompts.css">
 </head>
 <body>
