Toetsvragen page update

--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -6,6 +6,7 @@
 </head>
 
 <style>
+
 .button {
   text-align: left;
   background-color: #3DBB56;
@@ -23,13 +24,13 @@
 }
 
 .button:hover {
-  background-color: #259338; /* Green */
+  background-color: #259338;
   color: white;
 }
 
 
 .button:active {
-  background-color: #186825; /* Green */
+  background-color: #186825;
   color: white;
   transition-duration: 0.2s;
   margin: 3px 2px;
@@ -39,7 +40,7 @@
 table {
   font-family: nunito-regular, serif; font-size: 15px;
   border-collapse: collapse;
-  width: 100%;
+  width: 95%;
   margin: 4px 2px;
 }
 
