Toetsvragen page update

--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -77,13 +77,13 @@ tr:nth-child(even) {
     <td> Vraag 1 </td>
     <td> Vak 1 </td>
     <td> 18-11-2024 </td>
-    <td><button type="button"> Indexeer </button></td>
+    <td><button class="button"> Indexeer </button></td>
   </tr>
     <tr>
     <td> Vraag 2 </td>
     <td> Vak 2 </td>
     <td> 18-11-2024 </td>
-    <td><button type="button"> Indexeer </button></td>
+    <td><button class="button"> Indexeer </button></td>
   </tr>
 </table>
 
