--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -35,7 +35,7 @@
           </table>
     <script>
     $(document).ready(function(){
-      $.getJSON('http://127.0.0.1:5000/question_extract', function(data){
+      $.getJSON('http://127.0.0.1:5000/toetsvragen', function(data){
         $.each(data, function(key, value){
           $('vraag').append(value.vraag + "<br>");
           $('vak').append(value.vak + "<br>");
