--- a/Templates/vraag indexeren naar taxonomie.html
+++ b/Templates/vraag indexeren naar taxonomie.html
@@ -6,16 +6,32 @@
   <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
-<header class="header">
-        <a href="../index.html">
-            <img src="../assets/logo/logo_test-correct.svg" alt="Test-Correct Logo" class="logo">
-        </a>
-        <nav>
-            <a href="#" class="button">Vragen</a>
-            <a href="#" class="button">AI Prompts</a>
-            <a href="#" class="button active">Redacteuren</a>
-        </nav>
+    <header class="header">
+            <a href="../index.html">
+                <img src="../assets/logo/logo_test-correct.svg" alt="Test-Correct Logo" class="logo">
+            </a>
+            <nav>
+                <a href="#" class="button">Vragen</a>
+                <a href="#" class="button">AI Prompts</a>
+                <a href="#" class="button active">Redacteuren</a>
+            </nav>
     </header>
+    <div class = "container">
+        vraag: <span id="vraag"></span>
+        <br>
+            vak:
+        <br>
+           onderwijsniveau:
+        </br>
 
+        <form>
+        <label for="keuze">prompt:</label>
+        <select id="keuze" name="keuze">
+            <option value="prompt 1">prompt v1</option>
+        </select>
+    </form>
+        <br>
+        <div class="button"><button class="button">toepassen</button>
+    </div>
 </body>
 </html>
