--- a/Templates/vraag indexeren naar taxonomie.html
+++ b/Templates/vraag indexeren naar taxonomie.html
@@ -17,13 +17,14 @@
             </nav>
     </header>
     <div class = "container">
-        vraag: <span id="vraag"></span>
+        <div>vraag: <span id="vraag"></span></div>
         <br>
-            vak:
+            <div>vak: biologie</div>
         <br>
-           onderwijsniveau:
-        </br>
-
+           <div>onderwijsniveau: niveau 2</div>
+        <br>
+            <div>leerjaar: 4</div>
+        <br>
         <form>
         <label for="keuze">prompt:</label>
         <select id="keuze" name="keuze">
