--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title> Toetsvragen lijst </title>
-<!--<link rel="stylesheet" href="toetsvragen.css">-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/toetsvragen.css') }}">
 </head>
 <body>
@@ -39,22 +38,18 @@
           </table>
           <div class="pagination">
             {% if prev_page %}
-            <a href="{{ url_for('toetsvragen', page=prev_page) }}">Vorige</a>
+                <a href="{{ url_for('toetsvragen', page=prev_page) }}">Vorige</a>
             {% endif %}
 
-            {% for num in range(1, (vragen|length // 10) + 2) %}
-            <a href="{{ url_for('toetsvragen', page=num) }}">{{ num }}</a>
+            {% for num in range(1, total_pages + 1) %}
+                <a href="{{ url_for('toetsvragen', page=num) }}"
+                  {% if num == page %} class="active" {% endif %}>
+                   {{ num }}
+                </a>
             {% endfor %}
 
-<!--            {% for num in range(1, total_pages + 1) %}-->
-<!--            <a href="{{ url_for('toetsvragen', page=num) }}"-->
-<!--            {% if num == request.args.get('page', 1, type=int) %} class="active" {% endif %}>-->
-<!--            {{ num }}-->
-<!--            </a>-->
-<!--            {% endfor %}-->
-
             {% if next_page %}
-            <a href="{{ url_for('toetsvragen', page=next_page) }}">Volgende</a>
+                <a href="{{ url_for('toetsvragen', page=next_page) }}">Volgende</a>
             {% endif %}
           </div>
 </body>
