--- a/Templates/inloggen.html
+++ b/Templates/inloggen.html
@@ -10,7 +10,7 @@
 <header class="top-bar">
     <div class="container-main">
         <div class="left-side">
-            <a href="/" class="site-logo">
+            <a href="https://www.test-correct.nl/" class="site-logo">
                 <img src="../static/assets/logo/testcorrect-logo.svg" alt="Logo">
             </a>
         </div>
@@ -46,6 +46,6 @@
         </form>
             </div>
 
-<footer><a href="home.html"><strong>Keer terug naar home pagina</strong></a></footer>
+<footer><a href="https://www.test-correct.nl/"><strong>Keer terug naar home pagina</strong></a></footer>
 </body>
 </html>
