--- a/Templates/nieuwe_redacteur.html
+++ b/Templates/nieuwe_redacteur.html
@@ -10,7 +10,7 @@
 <header class="top-bar">
     <div class="container-main">
         <div class="left-side">
-            <a href="/" class="site-logo">
+            <a href="https://www.test-correct.nl/" class="site-logo">
                 <img src="testcorrect-logo.svg" alt="Logo">
             </a>
         </div>
@@ -40,7 +40,7 @@
             </div>
             <div class="field">
                     <label for="email">Email/login:</label>
-                    <input type="text" id="email" name="email" required="">
+                    <input type="text" id="email" name="email" placeholder="Uw email" required="">
             </div>
             <div class="field">
                 <label for="password">Wachtwoord</label>
@@ -58,6 +58,6 @@
         </form>
             </div>
 
-<footer><a href="home.html"><strong>Keer terug naar home pagina</strong></a></footer>
+<footer><a href="https://www.test-correct.nl/"><strong>Keer terug naar home pagina</strong></a></footer>
 </body>
 </html>
