header met logo toegevoegd

--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
+    <header class="header">
+         <a href="https://www.test-correct.nl/welcome">
+            <img src="../static/assets/logo/testcorrect-logo.svg" alt="Test-Correct Logo" class="logo">
+        </a>
+    </header>
 
 </body>
 </html>
