--- a/static/css/toetsvragen.css
+++ b/static/css/toetsvragen.css
@@ -101,8 +101,8 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-family: nunito-bold, serif;
-    font-size: 20px;
+    font-family:Nunito extrabold,sans-serif;
+    font-size: 17px;
 }
 
 li b {
@@ -111,12 +111,12 @@ li b {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-family: nunito-bold, serif;
-    font-size: 20px;
+    font-family:Nunito extrabold,sans-serif;
+    font-size: 17px;
 }
 
 li a:hover {
-    font-family: nunito-bold, serif;
-    font-size: 20px;
+    font-family:Nunito extrabold,sans-serif;
+    font-size: 17px;
     color: #004DF5 ;
 }
