--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -8,10 +8,20 @@
 </head>
 <body>
     <header class="header">
-         <a href="https://www.test-correct.nl/welcome">
+        <a href="https://www.test-correct.nl/welcome">
             <img src="../static/assets/logo/testcorrect-logo.svg" alt="Test-Correct Logo" class="logo">
         </a>
+        <nav>
+            <a href="#" class="button">Vragen</a>
+            <a href="#" class="button">AI Prompts</a>
+            <a href="#" class="button active">Redacteuren</a>
+        </nav>
     </header>
+    <main class="container">
+        <h1>AI Prompts</h1>
+
+
+    </main>
 
 </body>
 </html>
