--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -19,6 +19,18 @@
     </header>
     <main class="container">
         <h1>AI Prompts</h1>
+        <table class="AI Prompts">
+            <thead>
+                <tr>
+                    <th>Prompt</th>
+                    <th>Redacteur</th>
+                    <th>Toetsvragen ingedeeld</th>
+                    <th>Correct</th>
+                    <th>Acties</th>
+                </tr>
+            </thead>
+
+        </table>
 
 
     </main>
