Prompt toevoegen knop

--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -29,8 +29,10 @@
                     <th>Acties</th>
                 </tr>
             </thead>
-
         </table>
+        <div class="button">
+            <button class="button">Nieuwe prompt toevoegen</button>
+        </div>
 
 
     </main>
