knop naar redacteuren pagina werkt

--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="#" class="button">Vragen</a>
             <a href="#" class="button">AI Prompts</a>
-            <a href="#" class="button active">Redacteuren</a>
+            <a href="redacteur.html" class="button active">Redacteuren</a>
         </nav>
     </header>
     <main class="container">
