Styleguide + opmaak toetsvragen

--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <ul class="ul">
-      <li class="li b"><a href="https://www.test-correct.nl/">TEST-CORRECT</a></li>
+      <li><button style= "border: none; cursor: pointer; scale:95%;background:none;"><img src="static/assets/logo/testcorrect-logo.svg" alt="Link to test-correct homepage" href="https://www.test-correct.nl/" style= "border: none; cursor: pointer; scale:95%;background:none;"  ></button></li>
+<!--      <li><a href="https://www.test-correct.nl/">TEST-CORRECT</a></li>-->
       <li><a href="??">Oplossingen</a></li>
       <li><a href="https://www.test-correct.nl/toetsplatform">Platform</a></li>
       <li><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
@@ -21,7 +22,7 @@
     <button class="button"> Redacteuren </button>
       <h1 style="font-family:Nunito,serif; color:#041F74;"> Toetsvragen lijst </h1>
       <p style="font-family:Zilla slab,sans-serif; color:#041F74; margin: 4px 2px;" > Toetsvragen lijst </p>
-        <button type="button" style="font-family:Zilla slab,sans-serif; margin:4px 2px;" > Ververs </button>
+        <button class = "button" > Ververs </button>
           <table>
             <thead>
               <tr style="font-family: nunito-bold, serif; color:#041F74; font-size: 21px;">
