Styleguide + opmaak toetsvragen

--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul class="ul">
-      <li><button style= "border: none; cursor: pointer; scale:95%;background:none;"><img src="static/assets/logo/testcorrect-logo.svg" alt="Link to test-correct homepage" href="https://www.test-correct.nl/" style= "border: none; cursor: pointer; scale:95%;background:none;"  ></button></li>
+      <li><button style= "border: none; cursor: pointer; scale:95%;background:none;padding: 0 0;"><img src="static/assets/logo/testcorrect-logo.svg" alt="Link to test-correct homepage" href="https://www.test-correct.nl/" style= "border: none; cursor: pointer; scale:95%; background:none;"  ></button></li>
 <!--      <li><a href="https://www.test-correct.nl/">TEST-CORRECT</a></li>-->
       <li><a href="??">Oplossingen</a></li>
       <li><a href="https://www.test-correct.nl/toetsplatform">Platform</a></li>
