--- a/static/css/toetsvragen.css
+++ b/static/css/toetsvragen.css
@@ -63,14 +63,17 @@
 .pagination {
     margin-top: 20px;
     text-align: center;
+    position: absolute;
+    top: 95%;
+    left: 10%;
 }
 
 .pagination a {
-    padding: 10px;
+    padding: 3px;
     text-decoration: none;
     color:blue;
     margin: 5px;
-    border: 1px solid #ddd;
+    border: 0 solid #ddd;
     border-radius: 5px;
 }
 
@@ -81,6 +84,7 @@
 .pagination a.active {
     background-color: #041F74;
     color: white;
+    text-align: center;
 }
 
 /*Menu Test-correct*/
