--- a/static/css/toetsvragen.css
+++ b/static/css/toetsvragen.css
@@ -44,7 +44,8 @@
 .td, th {
   border: 1px solid #dddddd;
   text-align: left;
-  padding: 8px;
+  padding: 8px 8px;
+  margin: 6px;
 }
 
 .tr:nth-child(even) {
