--- a/Templates/inloggen.css
+++ b/Templates/inloggen.css
@@ -103,7 +103,7 @@ body {
             font-weight: bold;
             margin-bottom: 5px;
             display: block;
-            background-color: #041f74;
+            background-color: #004df5;
             color: white;
             padding: 5px;
             border-radius: 5px;
@@ -119,7 +119,7 @@ body {
         }
 
         .login_form .button {
-            background-color: #041f74;
+            background-color: #004df5;
             color: white;
             padding: 10px;
             border: none;
