--- a/Templates/nieuwe_redacteur.css
+++ b/Templates/nieuwe_redacteur.css
@@ -46,7 +46,7 @@ body {
         }
 
         .main-navigation a {
-            color: #041f74;
+            color: #004df5;
             text-decoration: none;
             font-size: 19px;
             font-weight: bold;
@@ -122,7 +122,7 @@ body {
         span {
             font-size: 17px;
             font-weight: bold;
-            color: #041F74;
+            color: #041f74;
             margin-left: 5px;
         }
 
@@ -155,7 +155,7 @@ body {
             font-weight: bold;
             margin-bottom: 5px;
             display: block;
-            background-color: #041f74;
+            background-color: #004df5;
             color: white;
             padding: 5px;
             border-radius: 5px;
@@ -171,7 +171,7 @@ body {
         }
 
         .login_form .button {
-            background-color: #041f74;
+            background-color: #004df5;
             color: white;
             padding: 10px;
             border: none;
