added placeholder text for generated answer

--- a/Templates/vraag indexeren resultaat.html
+++ b/Templates/vraag indexeren resultaat.html
@@ -33,7 +33,13 @@
                 </select>
             </form>
             <br>
-            <div class="button"><button class="button">taxonomie opslaan</button>
+            <div>
+            <label for="chatgpt_antwoord">gegenereerd voorstel:</label>
+            <span id="chatgpt_antwoord"> ai response...</span>
+            </div>
+            <br>
+              <div class="button">
+                <button class="button">taxonomie opslaan</button>
             </div>
     </body>
 </html>
